Fix query timestamp display in UI
Spacing is too close to the query text box, moving left improves look.

--- a/core/trino-web-ui/src/main/resources/webapp/assets/trino.css
+++ b/core/trino-web-ui/src/main/resources/webapp/assets/trino.css
@@ -426,6 +426,7 @@ pre {
 .query-header-timestamp {
     text-align: right;
     color: #b1b1b1;
+    margin-left: -15px;
 }
 
 .query-progress-container {
